objects/Member__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Info__c</fullName>
        <label>Extra Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MemberNumber__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Member Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Member_Type__c</fullName>
        <label>Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic,Intermediate,Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Tier_upgrade__c</fullName>
        <formula>today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Tier upgrade?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ROI__c</fullName>
        <label>ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Subscription_Date__c</fullName>
        <label>Subscription Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold,Silver,Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Member</label>
    <nameField>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>